Card 620 - fix centering of button on mobile footer

--- a/app/styles/components/results/_result_box.scss
+++ b/app/styles/components/results/_result_box.scss
@@ -39,6 +39,14 @@
     margin-left: -100%;
     width: 300%;
 
+    .icon {
+      // cheat to move things left a little to center on mobile
+      left: -5%;
+      @include desktop {
+        left: 0;
+      }
+    }
+
     @include desktop {
       position: static;
       background-color: transparent;
